test/files/neg/t5334_2.check
t5334_2.scala:5: error: implementation restriction: cannot reify block of type List[(C, C)] that involves a type declared inside the block being reified. consider casting the return value to a suitable type
  reify {
        ^
one error found
